# python-api-with-flask

./: .gitignore  pyproject.toml
src/: app.py
src/api_with_flask/: app.py
src/api_with_flask/models/: hotel.py
src/api_with_flask/resources/: hotel.py
src/models/: hotel.py  usuario.py
src/resources/: hotel.py  usuario.py
